fixed Registry doc tested registry
